@@ -1,5 +1,6 @@
 pgcenter (devel) unstable; urgency=low
 
+  * refactoring internal color management.
   * add new bufsize macros, increase line bufsize in read_diskstats().
   * add PVS-Studio comments, fix issues generated by PVS.
   * rename screens/consoles entities to more convenient name - tabs.
